#57: Removed debugging code.