@@ -1,5 +1,6 @@
 package com.exasol.adapter.dialects.rls;
 
+import java.util.Collections;
 import java.util.Map;
 
 import org.junit.jupiter.api.Tag;
@@ -9,7 +10,6 @@ import org.junit.jupiter.api.Tag;
 class RowLevelSecurityLocalIT extends AbstractRowLevelSecurityIT {
     @Override
     protected Map<String, String> getVirtualSchemaProperties() {
-        // return Collections.emptyMap();
-        return Map.of("DEBUG_ADDRESS", "172.17.0.1:3000", "LOG_LEVEL", "ALL");
+        return Collections.emptyMap();
     }
 }
